gccida/g0/process_init_element
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:6990:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inited; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:6991:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:6992:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:6994:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:6995:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:6998:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code fieldcode; // [rsp+24h] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:6999:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code fieldcode_0; // [rsp+28h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:7000:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code eltcode; // [rsp+2Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:7002:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elttype_0; // [rsp+38h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:7020:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->replacement_value ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:7022:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0->replacement_value = value; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:7025:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->replacement_value ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:7032:9: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
while ( constructor_stack_0->implicit 
        ^~~~~~~~~~~~~~~~~~~
        constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:7042:6: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( constructor_range_stack_0 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:7079:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[constructor_depth]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:7149:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[constructor_depth]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:7197:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[constructor_depth]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:7221:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = 0LL; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:7230:7: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( !constructor_range_stack_0 ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~
      constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_init_element/src/obj/c-typeck.o] Error 1
